<resources>
    <string name="app_name">RecipesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorites_fragment">Favorites</string>
    <string name="categories_fragment">Categories</string>
    <string name="recipes_recyclerview">Recipes RecyclerView</string>
    <string name="no_connection_imageview">No Connection ImageView</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="meal_category">Meal Category</string>
    <string name="beef">Beef</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="starter">Starter</string>
    <string name="side">Side</string>
    <string name="seafood">SeaFood</string>
    <string name="pork">Pork</string>
    <string name="pasta">Pasta</string>
    <string name="misc">Misc</string>
    <string name="lamb">Lamb</string>
    <string name="goat">Goat</string>
    <string name="dessert">Dessert</string>
    <string name="chicken">Chicken</string>
    <string name="breakfast">Breakfast</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="random_lorem_ipsum">Aliquam erat volutpat. Fusce mattis porta purus, at vestibulum ipsum congue ut. Vestibulum cursus est sit amet velit egestas, vel euismod tellus condimentum. Proin in enim elit. In condimentum, tortor nec consectetur rhoncus, dolor odio bibendum tellus, et maximus ligula orci at urna. Ut interdum volutpat velit, ut gravida enim placerat ac. Fusce semper sit amet tortor vel ultrices. Cras rhoncus, orci id suscipit finibus, lectus enim pulvinar risus, a finibus diam odio eu turpis. Duis congue in elit eget consectetur. Donec rutrum viverra purus, maximus tincidunt elit. Sed odio magna, volutpat ac lectus sed, vestibulum gravida nibh. Nullam eget porttitor lorem, ut faucibus diam. Donec magna nisi, sollicitudin eu consequat non, finibus vitae magna.</string>
    <string name="meal_title">Meal Title</string>
    <string name="meal_icon">meal icon</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="ingredient_measurement">Ingredient Measurement</string>
    <string name="save_to_favorites">Save To Favorites</string>
    <string name="no_meals_saved">No meals Saved</string>
    <string name="delete_favorite_meal_menu">Delete favorite meal menu</string>
    <string name="delete_all">Delete All</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
</resources>